@@ -1,3 +1,9 @@
+2005-11-28  Giulio Eulisse  <giulio.eulisse@cern.ch>
+
+	* TStorageFactorySystem.cc: forgotten method added.
+
+	* TFileAdaptorLinkDef.h: forgot to commit the file to cvs...
+
 2005-11-22  Giulio Eulisse  <giulio.eulisse@cern.ch>
 
 	* .admin/developers: admins added on pete's request.
